--- a/view/filmdescription.ejs
+++ b/view/filmdescription.ejs
@@ -22,15 +22,15 @@
             </ul>
         </nav>
         <section class="filmdetail-poster">
-            <img class="filmdetail-poster-img" src="https://image.tmdb.org/t/p/w500<%= imageURL %>" alt="poster of movie">
+            <img class="filmdetail-poster-img" src="https://image.tmdb.org/t/p/w500<%= moviePosterPath %>" alt="poster of movie">
 
             <div>
                 <button>go back</button>
                 <button><img class="filmdetail-favorite-icon" src="../static/images/favorite.png" alt="svg icon"></button>
             </div>
             <div>
-                <h1><%= title %></h1>
-                <p>american movie</p>
+                <h1><%= movieTitle %></h1>
+                <p><%= movieGenresClean %></p>
             </div>
             <div class="filmdetail-poster-gradient"></div>
             <div class="filmdetail-cursor"></div>
@@ -41,15 +41,13 @@
         <!-- Film description -->
         <section class="filmdetail-description filmdetail-hidden">
             <button class="filmdetail-watchnow">watch now</button>
-            <p>02:47:00</p>
-            <p>Set in the distant future, the film follows Paul Atreides as his family,
-                the noble House Atreides, is thrust into a war for the deadly
-                and inhospitable desert planet Arrakis
+            <p><%= movieRuntime %> minutes</p>
+            <p><%= movieOverview %>
             </p>
-            <p>25/04/2019</p>
+            <p><%= movieReleaseDate %></p>
         </section>
 
-
+        
 
         <!-- recipe -->
         <p class="filmdetail-recepten-button">recipes</p>
@@ -153,6 +151,22 @@
                 <div class="filmdetail-space"></div>
         </article>
 
+        <% if(inList){ %>
+            <form action="/favorite-deleted" method="POST">
+                <button style="background-color: red; color: white; font-size: x-large;" type="submit" name="favoriteBtn" value="<%= movieId %>">Delete from favorites</button>
+                </form>
+          <% } else{ %>  
+            <form action="/favorite-added" method="POST">
+                <button style="background-color: green; color: white; font-size: x-large;" type="submit" name="favoriteBtn" value="<%= movieId %>">Add to favorites</button>
+                </form>
+         <% } %>
+
+         <%= recipeTitle %>
+         <%= stepNumberArray %>
+         <%= stepOverviewArray %>
+         <%= ingredientNameArray %>
+         <%= ingredientValueArray %>
+         <%= ingredientUnitArray %>
     </main>
 
     <!-- FOOTER -->
