Directing from overviewpage
Co-authored-by: Jesse Kaptein <N0kk0N@users.noreply.github.com>

--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -37,6 +37,7 @@
                 <% for(let i = 0; i < posterPathArray.length; i++) { %>
                     <article class="gsap-slide movie-card">
                         <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
+                        <a href="/movie/<%= urlTitleArray[i] %>"><%= titleArray[i] %></a>
 
                     </article>
                 <% } %>
