Slugified overview/all

--- a/view/overviewAll.ejs
+++ b/view/overviewAll.ejs
@@ -23,6 +23,7 @@
             <% if(genreIdsArray[i].includes(28)) { %>
                 <article class="gsap-slide movie-card">
                     <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
+                    <a href="/movie/<%= urlTitleArray[i] %>"><%= urlTitleArray[i] %></a>
                 </article>
             <% } %>
         <% } %>
@@ -33,6 +34,7 @@
             <% if(genreIdsArray[i].includes(35)) { %>
                 <article class="gsap-slide movie-card">
                     <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
+                    <a href="/movie/<%= urlTitleArray[i] %>"><%= urlTitleArray[i] %></a>
                 </article>
             <% } %>
         <% } %>
@@ -43,6 +45,7 @@
             <% if(genreIdsArray[i].includes(18)) { %>
                 <article class="gsap-slide movie-card">
                     <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
+                    <a href="/movie/<%= urlTitleArray[i] %>"><%= urlTitleArray[i] %></a>
                 </article>
             <% } %>
         <% } %>
@@ -53,6 +56,7 @@
             <% if(genreIdsArray[i].includes(27)) { %>
                 <article class="gsap-slide movie-card">
                     <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
+                    <a href="/movie/<%= urlTitleArray[i] %>"><%= urlTitleArray[i] %></a>
                 </article>
             <% } %>
         <% } %>
