--- a/view/profile.ejs
+++ b/view/profile.ejs
@@ -12,7 +12,7 @@
     <p>Account name</p>
     <p><%= username %></p>
     <p>Genre's</p>
-    <p><%= genresCleanArray %></p>
+    <p><%= genres %></p>
     <p>Rating</p>
     <p><%= rating %></p>
     <a href="/profile/settings">change profile settings</a>
