Re-organized server.js and routing to ejs files.
Co-authored-by: RobinElseman <RobinElseman@users.noreply.github.com>

--- a/view/profile.ejs
+++ b/view/profile.ejs
@@ -16,5 +16,6 @@
     <p>Rating</p>
     <p><%= rating %></p>
     <a href="/profile/settings">change profile settings</a>
+    <a href="/logout">Log Out</a>
 </body>
 </html>
