added search page and functionality

--- a/view/nav.ejs
+++ b/view/nav.ejs
@@ -1,7 +1,7 @@
 <nav>
     <ul class="nav">
         <li><a href="/overview"><img src="../static/images/film.svg" alt="description1"></a></li>
-        <li><a href="/search"><img src="../static/images/search.svg" alt="description2"></a></li>
+        <li><a href="/searchmovie"><img src="../static/images/search.svg" alt="description2"></a></li>
         <li><a href="/favourites"><img src="../static/images/ticket.svg" alt="description3"></a></li>
         <li><a href="/profile"><img src="../static/images/user.svg" alt="description3"></a></li>
     </ul>
