--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -312,3 +312,158 @@ body{
     border-radius: 1rem;
     height: 15rem;
   }
+
+  /* signup */
+
+.signup{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+  
+label.register{
+  display: none;
+  padding-top: 30px;
+  text-align: center;
+}
+
+label.is-visible {
+  display: block;
+}
+
+label.label-heading p {
+  font-size: 1em;
+  color: #000;
+}
+
+/* error popup */
+label .label-text {
+  color: #000;
+  cursor: text;
+  font-size: 2em;
+  line-height: 20px;
+  text-transform: uppercase;
+  -moz-transform: translateY(-34px);
+  -ms-transform: translateY(-34px);
+  -webkit-transform: translateY(-34px);
+  transform: translateY(-34px);
+  transition: all 0.3s;
+}
+
+/* input box styling*/
+label input {
+  background-color: #c3c3c3;
+  border: 0;
+  border-bottom: 2px solid #000;
+  color: #000;
+  font-size: 1.2em;
+  letter-spacing: .05em;
+  padding: .1rem 1.3rem;
+  text-align: center;
+}
+
+button:hover,
+button:focus {
+  background-color: #000;
+  color: #fff;
+  outline: none;
+}
+
+#validate {
+  color: #;
+  font-weight: 700;
+  text-align: center;
+}
+
+label.label-heading {
+  display: block;
+  padding: .2rem 1.1rem;
+  font-size: 1.3em;
+  text-align: center;
+}
+
+.is-visible input:checked{
+  color: #717171;
+  text-shadow: 0 0  6px rgba(0, 0, 0, 0.8)
+}
+
+.input-btn {
+  margin-top: 2rem;
+  color: #717171;
+}
+
+.form-button {
+  background: transparent;
+  color: #000;
+  border: 2px solid #000;
+  font-size: 1em;
+  letter-spacing: 2px;
+  padding: 5px 25px;
+  text-transform: uppercase;
+  cursor: pointer;
+  display: inline-block;
+  margin: 0;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+  border-radius: .1rem;
+}
+
+/* Genre Checkboxxes */
+.genre-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+}
+
+.genre-grid li {
+  margin: 4px;
+  background-color: #FF673E;
+  border-radius: 4px;
+  /* border: 1px solid #000; */
+  overflow: hidden;
+  justify-content: center;
+  color: #fff;
+}
+
+/* IMDB Rating slider */
+
+.slidecontainer {
+  width: 100%;
+  margin-top: 1rem;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #FF673E;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #FF673E;
+  cursor: pointer;
+}
