submit button added

--- a/view/homepage.ejs
+++ b/view/homepage.ejs
@@ -135,11 +135,10 @@
       <div class="slidecontainer">
         <input type="range" min="1" max="10" value="5" class="slider" id="myRange" name="rating">
         <p>Value: <span id="rating"></span></p>
+       
       </div>
       <div class="input-btn">
-        <button type="button" class="form-button" value="next" onclick="next('genre','imdbRating')">OK <i
-            class="fa fa-check" aria-hidden="true"></i></button>
-        Press <strong>Enter ↵</strong>
+        <input type="submit" value="Register"  class="form-button"/>
       </div>
       <div class="input-btn">
         <i class="fa fa-arrow-up" style="font-size:2em" onclick="previous('imdbRating', 'genre')"></i>
