--- a/view/filmdescription.ejs
+++ b/view/filmdescription.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../static/css/styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 </head>
 
 <body>
@@ -54,7 +54,7 @@
 
         <article class="filmdetail-recipe">
                 <!-- ******** American burger recipe *******-->
-                <button class="filmdetail-recipe-button filmdetail-recipe-buttons"><h2>american burger</h2></button>
+                <button class="filmdetail-recipe-button filmdetail-recipe-buttons"><h2><%= recipeTitle %></h2></button>
                 <!-- ingrediënts -->
                 <ul class="filmdetail-recipe1 filmdetail-active filmdetail-recipe-lists">
                     <li>
@@ -102,7 +102,7 @@
                     </li>
                 </ul>
                 <!-- *****Recipe 2********* -->
-                <button class="filmdetail-recipe-button2 filmdetail-recipe-buttons"><h2>pancakes</h2></button>
+                <!-- <button class="filmdetail-recipe-button2 filmdetail-recipe-buttons"><h2>pancakes</h2></button>
                 <ul class="filmdetail-recipe2 filmdetail-active filmdetail-recipe-lists">
                     <li>
                         <section class="filmdetail-ingredients-section">
@@ -120,10 +120,10 @@
                                 <li>mixed dried herbs</li>
                             </ul>
                         </section>
-                    </li>
+                    </li> -->
              
                         <!-- instructions -->
-                    <li>
+                    <!-- <li>
                         <h3 class="filmdetail-instructies-titel">instructies</h3>
                         <section class="swiper filmdetail-swiper">
                                 <ul class="swiper-wrapper filmdetail-wrapper">
@@ -147,7 +147,7 @@
                                 <button class="swiper-button-next filmdetail-button-next"></button>
                         </section>
                     </li>
-                </ul>
+                </ul> -->
                 <div class="filmdetail-space"></div>
         </article>
 
