--- a/view/overviewAll.ejs
+++ b/view/overviewAll.ejs
@@ -22,8 +22,9 @@
         <% for(let i = 0; i < posterPathArray.length; i++) { %>
             <% if(genreIdsArray[i].includes(28)) { %>
                 <article class="gsap-slide movie-card">
-                    <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
-                    <a href="/movie/<%= urlTitleArray[i] %>"><%= urlTitleArray[i] %></a>
+                    <a href="/movie/<%= urlTitleArray[i] %>">
+                        <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
+                    </a>
                 </article>
             <% } %>
         <% } %>
@@ -33,8 +34,9 @@
         <% for(let i = 0; i < posterPathArray.length; i++) { %>
             <% if(genreIdsArray[i].includes(35)) { %>
                 <article class="gsap-slide movie-card">
-                    <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
-                    <a href="/movie/<%= urlTitleArray[i] %>"><%= urlTitleArray[i] %></a>
+                    <a href="/movie/<%= urlTitleArray[i] %>">
+                        <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
+                    </a>
                 </article>
             <% } %>
         <% } %>
@@ -44,8 +46,9 @@
         <% for(let i = 0; i < posterPathArray.length; i++) { %>
             <% if(genreIdsArray[i].includes(18)) { %>
                 <article class="gsap-slide movie-card">
-                    <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
-                    <a href="/movie/<%= urlTitleArray[i] %>"><%= urlTitleArray[i] %></a>
+                    <a href="/movie/<%= urlTitleArray[i] %>">
+                        <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
+                    </a>
                 </article>
             <% } %>
         <% } %>
@@ -55,8 +58,9 @@
         <% for(let i = 0; i < posterPathArray.length; i++) { %>
             <% if(genreIdsArray[i].includes(27)) { %>
                 <article class="gsap-slide movie-card">
-                    <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
-                    <a href="/movie/<%= urlTitleArray[i] %>"><%= urlTitleArray[i] %></a>
+                    <a href="/movie/<%= urlTitleArray[i] %>">
+                        <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
+                    </a>
                 </article>
             <% } %>
         <% } %>
