--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -17,7 +17,7 @@
             <img src="https://image.tmdb.org/t/p/w500<%= backdropPathArray[0] %>">
             <div class="overlay-content">
                 <h2><%= titleArray[0] %></h2>
-                <h3><%=genreIdsArray[0] %></h3>
+                <h3><%= genreIdsArray[0].join(' - ') %></h3>
                 <button onclick="window.location.href='/movie/' + '<%= urlTitleArray[0] %>'">Watch now</button>
             </div>
         </section>
